--- a/SHackmann-Portfolio/src/index.css
+++ b/SHackmann-Portfolio/src/index.css
@@ -1,66 +1,66 @@
 body {
-
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-header {
-    background-color: #f9f6f8;
+  }
+  
+  header {
+    background-color: #f8f9fa;
     padding: 1rem;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 1000;
-}
-
-nav ul {
+  }
+  
+  nav ul {
     list-style: none;
     padding: 0;
     display: flex;
     gap: 1rem;
     margin: 0;
     justify-content: center;
-}
-
-nav ul li {
+  }
+  
+  nav ul li {
     display: inline;
-}
-
-section {
+  }
+  
+  section {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vh;
     padding: 4rem 1rem 1rem;
     margin-top: 3rem;
-
-}
-
-.container {
+  }
+  
+  .container {
     max-width: 800px;
     width: 100%;
     padding: 0 1rem;
     text-align: center;
-}
-
-.projects {
+  }
+  
+  .projects {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
     padding: 1rem;
     justify-content: center;
-}
-
-.project {
+  }
+  
+  .project {
     border: 1px solid #ddd;
     padding: 1rem;
     border-radius: 8px;
     width: calc(33% - 2rem);
     text-align: center;
-}
-
-.project h3 {
+  }
+  
+  .project h3 {
     margin-top: 0;
-}
+  }
+  
