--- a/SHackmann-Portfolio/src/components/Portfolio.css
+++ b/SHackmann-Portfolio/src/components/Portfolio.css
@@ -9,7 +9,7 @@
     background-size: cover;
     background-position: center;
     color: #f2ede3;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Source Code Pro', 'Arial', sans-serif;
     text-align: center;
   }
   
