--- a/SHackmann-Portfolio/src/components/AboutMe.css
+++ b/SHackmann-Portfolio/src/components/AboutMe.css
@@ -5,7 +5,7 @@
     height: 100vh;
     background-color: #f5f5f5; /* Adjust to match the background color */
     color: #333;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Source Code Pro', 'Arial', sans-serif;
     text-align: left;
     padding: 2rem; /* Ensure some padding around the content */
     box-sizing: border-box;
