--- a/SHackmann-Portfolio/src/components/Education.css
+++ b/SHackmann-Portfolio/src/components/Education.css
@@ -6,7 +6,7 @@
     padding: 2rem 1rem;
     background-color: #f0f0f0; /* Light grey background */
     color: #333;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Source Code Pro', 'Arial', sans-serif;
     text-align: left;
     height: 100vh;
     width: 100vw;
@@ -59,7 +59,6 @@
   }
   
   .education-item::after {
-    content: '';
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
