--- a/SHackmann-Portfolio/src/index.css
+++ b/SHackmann-Portfolio/src/index.css
@@ -32,8 +32,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vh;
-    padding: 4rem 1rem 1rem;
+    width: 100vw;
+    /* padding: 4rem 1rem 1rem; */
     margin-top: 3rem;
   }
   
