--- a/SHackmann-Portfolio/src/components/LandingPage.css
+++ b/SHackmann-Portfolio/src/components/LandingPage.css
@@ -1,61 +1,73 @@
 .landing-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    background-color: #6f7c7d; /* Adjust to match the background color */
-    color: #f2ede3; /* Match header text color */
-    font-family: 'Source Code Pro', 'Arial', sans-serif;
-    text-align: center;
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margin */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #6f7c7d; /* Adjust to match the background color */
+  color: #f2ede3; /* Match header text color */
+  font-family: 'Source Code Pro', 'Arial', sans-serif;
+  text-align: center;
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margin */
+  position: relative; /* To position the background image */
+}
+
+.landing-page .content {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end; /* Align items to the bottom */
+  justify-content: flex-start; /* Align items to the left */
+  width: 100%;
+  height: 100%;
+  padding: 20px; /* Adjust padding if necessary */
+}
+
+.text-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+}
+
+.text-section h1 {
+  font-size: 5rem; /* Adjust size as needed */
+  margin: 0;
+}
+
+.landing-page .text-section p {
+  font-size: 2rem;
+  margin: 0.5rem 0 4rem;
+}
+
+.qr-code {
+  margin-left: 2rem;
+  flex: 1;
+  align-self: center; /* Align QR code to the bottom */
+}
+
+.qr-code img {
+  width: 600px; /* Adjust size as needed */
+  height: auto;
+}
+
+#photo-staysha {
+  opacity: 50%;
+  position: absolute;
+  left: 270px;
+  bottom: 60px;
+  width: 1000px;
+}
+
+/* Ensure higher specificity */
+.landing-page .text-section h1 {
+  font-size: 6rem; /* Try increasing the size */
+  text-align: left;
+}
+
+/* Example media query for responsiveness */
+@media (max-width: 1200px) {
+  .landing-page .text-section h1 {
+    font-size: 4rem; /* Adjust for smaller screens */
   }
-  
-.landing-page  .content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    position: relative;
-    /* max-width: 1200px; */
-  }
-  
-  .text-section {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .text-section h1 {
-    font-size: 3rem;
-    margin: 0;
-  }
-  
-  .text-section p {
-    font-size: 1.5rem;
-    margin: 0.5rem 0 0;
-  }
-  
-  .qr-code img {
-    width: 300px; /* Adjust size as needed */
-    height: auto;
-  }
-  
-  .qr-code {
-    margin-left: 2rem;
-  }
-  
-  .text-section, .qr-code {
-    flex: 1;
-  }
-  
-  #photo-staysha {
-    opacity: 50%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 500px;
-  }
-  
+}
